Review refactor and auth changes